# modeltune

./: README.md  docker-compose.yml
js/: .dockerignore  .env  .gitignore  .infisical.json  .pnp.cjs  .prettierrc.js  .yarnrc.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
js/apps/modeltune/: .env  components.json  next.config.js  package.json  tailwind.config.js  tsconfig.json
js/apps/modeltune/src/: middleware.ts
js/apps/playground/: tsconfig.json
js/apps/playground/scripts/: build.js
js/apps/playground/src/: index.ts
js/db/: .env  index.ts  package.json  tsconfig.json
js/db/client/: index-browser.js  index.d.ts  index.js  schema.prisma
js/db/prisma/: schema.prisma
js/libs/db/: package.json  tsconfig.json
js/libs/prompt-engine/: package.json  tsconfig.json
js/modeltune/: .env  Dockerfile  next.config.js  package.json  tsconfig.json
js/modeltune/src/: middleware.ts
js/playground/: .env  package.json  tsconfig.json
js/playground/src/: index.ts
js/prompt-engine/: README.md
js/prompt-engine/src/: chain.ts
py/: .env  README.md  docker-compose.yml
py/gpt/: Dockerfile  finetune.py  requirements.txt  setup.cfg  worker.py
py/gpt-celery/: Dockerfile  finetune.py
py/gpt-service-modal/: Dockerfile  requirements.modal.txt  requirements.txt  worker.py
py/gpt-service-modal/src/: app.py  common.py  download.py  factory.py  inference.py  inngest.py  test.py
py/gpt/src/: huggingface.py  inference.py  llm.py
py/gpt/src/gpt/: huggingface.py  llm.py  reporter.py  train.py  utils.py
py/llm-api/: Dockerfile  main.py  requirements.txt
py/storytime/: generator.py  requirements.txt
(+79 files in other folders)
