[metadata]
name = nc_gpt
version = 0.0.1
author = NealCorp
author_email = chandra.neal@gmail.com
description = Python client library for inference and fine-tuning

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.9
install_requires =
    accelerate
    numpy
    requests
    rwkv
    safetensors
    sentencepiece
    tqdm
    torch
    datasets
    peft @ git+https://github.com/huggingface/peft.git@70af02a2bca5a63921790036b2c9430edf4037e2#egg=peft
    transformers @ git+https://github.com/huggingface/transformers.git#egg=transformers
    alpaca_lora_4bit @ git+https://github.com/nealchandra/alpaca_lora_4bit@neal#egg=alpaca_lora_4bit

[options.extras_require]
dev = isort; black;

[options.packages.find]
where=src