[metadata]
name = gpt
version = 0.0.1
author = NealCorp
author_email = chandra.neal@gmail.com
description = Python client library for inference and fine-tuning

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.8
# install_requires =
#     accelerate==0.20.3
#     einops==0.6.1
#     numpy
#     requests
#     rwkv
#     safetensors
#     sentencepiece
#     tqdm
#     torch
#     datasets
#     triton
#     bitsandbytes
#     scipy
#     peft @ git+https://github.com/huggingface/peft.git@86290e9660d24ef0d0cedcf57710da249dd1f2f4#egg=peft
#     transformers @ git+https://github.com/huggingface/transformers.git@66954ea25e342fd451c26ec1c295da0b8692086b#egg=transformers

[options.extras_require]
dev = isort; black;

[options.packages.find]
where=src